Version 1.9.12:
+ Fixed a bug with one parameter models
+ Added support for seqgen
+ GLM fitting algorithm can now take more steps to converge
+ Updated the vignette

Version 1.9.11:
+ Added parallelization using doMC.
+ Some improvements to the UI.
+ Updated copyright information.
+ Added import from ape.
+ Updated the vignette.

Version 1.9.10:
+ Use /dev/shm for temp files if available
+ Added "folded" option to use a folded JSFS
+ Added documentation for fasta2jsfs()
+ Made fasta2jsfs calculate the folded JSFS if no outgroup is given.

Version 1.9.9:
+ Reworked the demographic model class to be more flexible and consistent.